<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@color/gray">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/botton_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/toolbar"
        app:title="@string/explore_everywhere"
        xmlns:android="http://schemas.android.com/apk/res/android"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="58dp"
            android:text="@string/return_label"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOneWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:layout_marginStart="15dp"
            android:text="@string/one_way_label"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/textViewReturn"
            app:layout_constraintTop_toTopOf="@+id/textViewReturn" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPlace"
            android:layout_width="163dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="85dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="3sp"
            android:text="@string/san_francisco_international"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextPlace"
            android:layout_width="190dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="3sp"
            android:text="@string/everywhere_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/editTextPlace"
            app:layout_constraintTop_toTopOf="@+id/editTextPlace" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="125dp"
            android:text="@string/date_of_travel_label"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPlace" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="125dp"
            android:text="@string/_25_feb_3_mar_label"
            android:textSize="15sp"
            android:textColor="@color/siam"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonFocus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:padding="3sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:srcCompat="@drawable/focoo"/>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/got_it"
            android:textColor="@color/siam"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/white"
            android:padding="8sp"
            android:text="@string/united_states_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        >

        <ImageButton
            android:id="@+id/imageButtonAnegeles"
            android:layout_width="163dp"
            android:layout_height="123dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="435dp"
            android:background="@color/white"
            app:srcCompat="@drawable/losangeles"/>

        <ImageButton
            android:id="@+id/imageButtonVegas"
            android:layout_width="163dp"
            android:layout_height="165dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="435dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toEndOf="@+id/imageButtonAnegeles"
            app:layout_constraintTop_toTopOf="@+id/imageButtonAnegeles"
            app:srcCompat="@drawable/lasvegas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonSeattle"
            android:layout_width="163dp"
            android:layout_height="164dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="570dp"
            android:background="@color/white"
            app:srcCompat="@drawable/seattle"/>

        <ImageButton
            android:id="@+id/imageButtonNY"
            android:layout_width="163dp"
            android:layout_height="122dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="612dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.339"
            app:srcCompat="@drawable/losangeles" />

    </LinearLayout>




</FrameLayout>